[package]
authors = ["stuart_zhang <stuartpage@qq.com>"]
categories = ["GUI", "API bindings"]
description = "封装Microsoft Edge WebView2浏览器内核为Native Windows GUI (i.e. NWG crate)开发框架的WebView图形控件"
edition = "2021"
keywords = ["nwg", "nwd", "webview2", "edge"]
license = "MIT"
name = "nwg-webview-ctrl"
version = "0.1.2"
repository = "https://github.com/stuartZhang/nwg-webview-ctrl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
deferred-future = {version = "0.1.5", default-features = false, features = ["local"]}
futures = {version = "0.3.28", default-features = false}
nwg = {version = "1.0.12", default-features = false, features = ["frame"], package = "native-windows-gui"}
webview2 = "0.1.4"
winapi = {version = "0.3.9", default-features = false}

[dev-dependencies]
clap = { version = "4.4.8", features = ["derive"] }
nwd = {version = "1.0.3", package ="native-windows-derive"}
nwg = {version = "1.0.12", default-features = false, features = ["high-dpi", "image-decoder"], package = "native-windows-gui"}